--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "express": "^4.17.1",
     "ioredis": "^4.23.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose-type-email": "^1.1.2",
     "mongoose": "^5.11.19",
-    "nodemon": "^2.0.7"
+    "mongoose-type-email": "^1.1.2",
+    "nodemon": "^2.0.7",
+    "os": "^0.1.1"
   },
   "devDependencies": {},
   "scripts": {
