--- a/package.json
+++ b/package.json
@@ -4,18 +4,23 @@
   "description": "",
   "main": "app.js",
   "dependencies": {
+    "axios": "^0.21.1",
     "express": "^4.17.1",
     "ioredis": "^4.23.0",
     "jsonwebtoken": "^8.5.1",
+    "kafkajs": "^1.15.0",
     "mongoose": "^5.11.19",
     "mongoose-type-email": "^1.1.2",
-    "nodemon": "^2.0.7",
     "os": "^0.1.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "nodemon": "^2.0.7"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "nodemon server.js",
+    "producer": "node ./src/producer.js",
+    "consumer": "node ./src/consumer.js"
   },
   "repository": {
     "type": "git",
